@@ -1,3 +1,7 @@
+2011-09-27  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* simplify state numbers
+
 2011-09-23  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* fix bug of not properly deleted proof tree windows and
